# fun-lights

./: Cargo.toml  LICENSE  README.md
res/: table.mtl
src/: composite.wgsl  debug.rs  def_render.rs  g_pass.wgsl  main.rs  renderable.rs  shader.wgsl  table_scene.rs  visual.rs
